# ec-project

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
alembic/: env.py
alembic/versions/: 507777bcd616_add_brand_table.py  93593486a310_add_product_table.py  f5c9b3b7eb2f_add_user_table.py
app/: __init__.py  deps.py  exceptions.py  main.py
app/core/: config.py  security.py
app/crud/: brand.py  product.py  user.py
app/db/: session.py
app/endpoints/: auth.py  brand.py  index.py  product.py  user.py
app/models/: base.py  brand.py  product.py  user.py
app/schemas/: brand.py  message.py  product.py  token.py  user.py  utils.py
