[tool.poetry]
name = "ec-project"
version = "0.1.0"
description = ""
authors = ["carol <awdrg1210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
uvicorn = {version = "^0.17.6", extras = ["standard"]}
databases = {version = "^0.5.5", extras = ["postgresql"]}
ormar = {version = "^0.11.0", extras = ["postgresql"]}
pydantic = {version = "^1.9.0", extras = ["email"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
tox-poetry = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
